<resources>
    <string name="app_name">FarmerApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="complete_profile">COMPLETE YOUR PROFILE</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="address">Address</string>
    <string name="question">Question</string>
    <string name="post_your_question_here">Post your question here</string>
    <string name="add_resource">Add Image/Video/Voice to your post (optional)</string>
    <string name="phone">Phone Number</string>
    <string name="village">Village</string>
    <string name="submit">Submit</string>
    <string name="post">Post</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="taluka">Taluka</string>
    <string name="crop">Crop</string>
    <string name="credit">Credit</string>
    <string name="scheme">Scheme</string>
    <string name="askCrop">Ask your query related to Crop</string>
    <string name="askCredit">Ask your query related to Credit</string>
    <string name="askScheme">Ask your query related to Scheme</string>
    <string name="cropApi">crops</string>
    <string name="cropLang">crops?lang=en</string>

    <string-array name="title">
        <item>Crop</item>
        <item>Credit</item>
        <item>Scheme</item>
    </string-array>

    <string-array name="description">
        <item>Ask your query related to Crop</item>
        <item>Ask your query related to Credit</item>
        <item>Ask your query related to Scheme</item>
    </string-array>
</resources>